# lv2

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .stylelintrc.json  Doxyfile  INSTALL.md  NEWS  README  README.md  doxy-style.css  ext.pc.in  ext.pc.template  ext.wscript  gendoc.py  genreleases.py  genwscript.py  meson.build  meson_options.txt  waf  wscript  wscript.template
doc/: DoxygenLayout.xml  asciidoc.css  doxy-style.css  htaccess.in  index.html.in  index.php  layout.xml  mainpage.dox  meson.build  pygments.css  reference.doxygen.in  style.css
doc/c/: doxy-style.css  layout.xml  mainpage.md  meson.build  reference.doxygen.in
doc/ns/: meson.build
doc/style/: asciidoc.css  meson.build  pygments.css  style.css
lv2/: meson.build
lv2/atom/: atom-test-utils.c  atom-test.c  atom.h  atom.meta.ttl  atom.ttl  forge-overflow-test.c  forge.h  lv2-atom.doap.ttl  manifest.ttl  meson.build  util.h
lv2/atom.lv2/: atom.meta.ttl  atom.ttl  manifest.ttl
lv2/buf-size/: buf-size.h  buf-size.ttl  lv2-buf-size.doap.ttl  meson.build
lv2/buf-size.lv2/: buf-size.meta.ttl  buf-size.ttl  manifest.ttl
lv2/core/: attributes.h  lv2.h  lv2_util.h  lv2core.doap.ttl  lv2core.meta.ttl  lv2core.ttl  manifest.ttl  meson.build  meta.ttl  people.ttl
lv2/core.lv2/: lv2core.meta.ttl  lv2core.ttl  manifest.ttl  meta.ttl  people.ttl
lv2/data-access/: data-access.h  data-access.meta.ttl  data-access.ttl  lv2-data-access.doap.ttl  meson.build
lv2/data-access.lv2/: data-access.meta.ttl  data-access.ttl  manifest.ttl
lv2/dynmanifest/: dynmanifest.h  dynmanifest.meta.ttl  dynmanifest.ttl  lv2-dynmanifest.doap.ttl  meson.build
lv2/dynmanifest.lv2/: dynmanifest.meta.ttl  dynmanifest.ttl  manifest.ttl
lv2/event/: event-helpers.h  event.h  event.meta.ttl  event.ttl  lv2-event.doap.ttl  manifest.ttl  meson.build
lv2/event.lv2/: event.meta.ttl  event.ttl  manifest.ttl
lv2/instance-access/: instance-access.h  instance-access.ttl  lv2-instance-access.doap.ttl  meson.build
lv2/instance-access.lv2/: instance-access.meta.ttl  instance-access.ttl  manifest.ttl
lv2/log/: log.h  log.meta.ttl  log.ttl  logger.h  meson.build
lv2/log.lv2/: log.meta.ttl  log.ttl  manifest.ttl
lv2/midi/: lv2-midi.doap.ttl  manifest.ttl  meson.build  midi.h  midi.ttl
lv2/midi.lv2/: manifest.ttl  midi.meta.ttl  midi.ttl
lv2/morph/: meson.build  morph.h  morph.meta.ttl  morph.ttl
lv2/morph.lv2/: manifest.ttl  morph.meta.ttl  morph.ttl
lv2/ns/: index.html.in
lv2/options/: lv2-options.doap.ttl  meson.build  options.h  options.ttl
lv2/options.lv2/: manifest.ttl  options.meta.ttl  options.ttl
lv2/parameters/: meson.build  parameters.h  parameters.meta.ttl  parameters.ttl
lv2/parameters.lv2/: manifest.ttl  parameters.meta.ttl  parameters.ttl
lv2/patch/: manifest.ttl  meson.build  patch.h  patch.meta.ttl  patch.ttl
lv2/patch.lv2/: manifest.ttl  patch.meta.ttl  patch.ttl
lv2/port-groups/: manifest.ttl  meson.build  port-groups.h  port-groups.meta.ttl  port-groups.ttl
lv2/port-groups.lv2/: manifest.ttl  port-groups.meta.ttl  port-groups.ttl
lv2/port-props/: lv2-port-props.doap.ttl  meson.build  port-props.h  port-props.meta.ttl  port-props.ttl
lv2/port-props.lv2/: manifest.ttl  port-props.meta.ttl  port-props.ttl
lv2/presets/: lv2-presets.doap.ttl  meson.build  presets.h  presets.ttl
lv2/presets.lv2/: manifest.ttl  presets.meta.ttl  presets.ttl
lv2/resize-port/: meson.build  resize-port.h  resize-port.meta.ttl  resize-port.ttl
lv2/resize-port.lv2/: manifest.ttl  resize-port.meta.ttl  resize-port.ttl
lv2/state/: lv2-state.doap.ttl  manifest.ttl  meson.build  state.h  state.meta.ttl  state.ttl
lv2/state.lv2/: manifest.ttl  state.meta.ttl  state.ttl
lv2/thread/: lv2-thread.doap.ttl  manifest.ttl  thread.h  thread.ttl
lv2/time/: lv2-time.doap.ttl  meson.build  time.h  time.meta.ttl  time.ttl
lv2/time.lv2/: manifest.ttl  time.meta.ttl  time.ttl
lv2/ui/: lv2-ui.doap.ttl  manifest.ttl  meson.build  ui.h  ui.meta.ttl  ui.ttl
lv2/ui.lv2/: manifest.ttl  ui.meta.ttl  ui.ttl
lv2/units/: lv2-units.doap.ttl  manifest.ttl  meson.build  units.h  units.meta.ttl  units.ttl
lv2/units.lv2/: manifest.ttl  units.meta.ttl  units.ttl
lv2/uri-map/: meson.build  uri-map.h  uri-map.meta.ttl  uri-map.ttl
lv2/uri-map.lv2/: manifest.ttl  uri-map.meta.ttl  uri-map.ttl
lv2/urid/: blank-host-test.c  blank-host.h  check-static-ids.c  lv2-urid.doap.ttl  manifest.ttl  meson.build  sid.h  urid.h  urid.ttl
lv2/urid.lv2/: manifest.ttl  urid.meta.ttl  urid.ttl
lv2/worker/: lv2-worker.doap.ttl  meson.build  worker.h  worker.meta.ttl  worker.ttl
lv2/worker.lv2/: manifest.ttl  worker.meta.ttl  worker.ttl
lv2specgen/: .pylintrc.toml  footer.html  lv2docgen.py  lv2specgen.py  meson.build  template.html
lv2specgen/DTD/: xhtml-rdfa-1.dtd  xhtml-rdfa-model-1.mod  xhtml-ruby-1.mod
meson/suppressions/: meson.build
plugins/: .clang-tidy  literasc.py  meson.build  wscript
plugins/eg-amp.lv2/: README.txt  amp.c  amp.ttl  manifest.ttl  manifest.ttl.in  meson.build  wscript
plugins/eg-amppp.lv2/: README.txt  amppp.cpp  amppp.ttl  manifest.ttl.in  wscript
plugins/eg-fifths.lv2/: fifths.c  meson.build  uris.h  wscript
plugins/eg-metro.lv2/: README.txt  manifest.ttl.in  meson.build  metro.c  metro.ttl  wscript
plugins/eg-midiamp.lv2/: README.txt  manifest.ttl.in  midiamp.cpp  midiamp.ttl  wscript
plugins/eg-midigate.lv2/: meson.build  midigate.c  midigate.ttl  wscript
plugins/eg-params.lv2/: meson.build  params.c  params.ttl  state_map.h  wscript
plugins/eg-sampler.lv2/: README.txt  atom_sink.h  manifest.ttl  manifest.ttl.in  meson.build  peaks.h  sampler.c  sampler.ttl  sampler_ui.c  uris.h  wscript
plugins/eg-scope.lv2/: examploscope.c  examploscope_ui.c  manifest.ttl.in  meson.build  uris.h  wscript
plugins/eg-synth.lv2/: manifest.ttl.in  synth.c  synth.ttl  wscript
plugins/eg01-amp.lv2/: amp.c  (+1 more)
test/: .clang-tidy  atom_test_utils.c  meson.build  test_atom.c  test_build.c  test_build.cpp  test_forge_overflow.c
util/: lv2_validate.in  meson.build
(+434 files in other folders)
